--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,19 @@
+# Archivos de IDE
+.vscode/
+
+# Entorno virtual
 venv
+
+# Archivos compilados de Python
+__pycache__/
+*.py[cod]
+*.pyo
+*.pyd
+
+# Archivos de logs
+*.log
+
+# Archivos temporales de Django
+*.pot
+*.pyc
+*.mo
